--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,51 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+* {
+  box-sizing: border-box;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  background-color: black;
+  color: white;
+  display: grid;
+  place-content: center;
+  margin: 0;
+}
+.osrs-fields-group {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 0.5rem;
+  background-color: rgba(150, 150, 150, 0.1);
+  border-color: rgba(150, 150, 150, 0.3);
+  margin-bottom: 2rem;
+}
+input {
+  background-color: rgba(150, 150, 150, 0.2);
+  border: 1px solid rgba(150, 150, 150, 0.2);
+  padding: 1rem;
+  border-radius: 0.25rem;
+}
+input:focus {
+  border: 1px solid rgba(150, 150, 150, 0.4);
+  outline: 1px solid blue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.player-card {
+  background-color: rgba(150, 150, 150, 0.1);
+  border-color: rgba(150, 150, 150, 0.3);
+  border-radius: 1rem;
+  width: max-content;
+  padding: 0.5rem 1rem;
+  line-height: 1;
+  font-size: 1rem;
 }
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.players-grid {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
