--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ body > * {
   margin-bottom: 2rem;
 }
 input {
-  background-color: rgba(150, 150, 150, 0.2);
+  background-color: rgba(219, 219, 219, 0.2);
   border: 1px solid rgba(150, 150, 150, 0.2);
   padding: 1rem;
   border-radius: 0.25rem;
@@ -49,6 +49,9 @@ input {
 input:focus {
   border: 1px solid rgba(150, 150, 150, 0.4);
   outline: 1px solid blue;
+}
+input::placeholder {
+  color: rgba(255, 255, 255, 0.55);
 }
 
 .player-card {
