--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  width: 100%;
 }
 
 * {
@@ -43,6 +43,13 @@ body>* {
   background-color: rgba(150, 150, 150, 0.1);
   border-color: rgba(150, 150, 150, 0.3);
   margin-bottom: 2rem;
+  width: 100%;
+  max-width: 500px !important;
+  margin: auto;
+}
+
+.osrs-fields-group-wrapper {
+  padding: 2rem;
 }
 
 input {
@@ -129,4 +136,18 @@ input::placeholder {
 .reset-btn {
   color: red;
   background-color: rgba(56, 8, 8, 0.5);
+}
+
+.swiper {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  width: 250px !important;
+}
+
+.swiper-wrapper {
+  padding: 1rem;
 }
