--- a/src/index.css
+++ b/src/index.css
@@ -19,15 +19,23 @@ a {
   text-decoration: inherit;
 }
 
+.osrs-fields-group {
+  max-width: 100%;
+}
+
 a:hover {
   color: #535bf2;
+}
+
+body, html {
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
   min-height: 100vh;
 }
 
@@ -56,4 +64,22 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+a {
+  text-decoration: underline;
+}
+
+.row {
+  display: inline-flex;
+  align-items: center;
+  gap: .5em;
+}
+
+.credits {
+  font-size: 15px;
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%);
 }
