add winner styling

--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,9 @@ input::placeholder {
   line-height: 1;
   font-size: 1rem;
   text-align: left;
+  transform-origin: center;
+  position: relative;
+  transition: all 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 
 .player-stats {
@@ -150,4 +153,45 @@ input::placeholder {
 
 .swiper-wrapper {
   padding: 1rem;
+}
+
+
+.crown {
+  fill: yellow;
+  position: absolute;
+  top: 0;
+  right: 0;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+
+.player-card.winner:before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: block;
+  mix-blend-mode: lighten;
+  left: 0;
+  top: 0;
+  right: 0;
+  border-radius: 1rem;
+  opacity: 0.3;
+  box-shadow: 0px 0px 5px yellow;
+  background: url("https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExNGIxNzVmNGEyNDE3MjYzNDZhYzM5NTI5N2IyZGMxOWM5YWEyN2YwOCZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/3ohs4ucXR6NYRxmpTa/giphy.gif") center center / cover no-repeat;
+}
+
+.player-card.winner .crown {
+  opacity: 1;
+}
+
+.winner-revealed .player-card:not(.winner) {
+  transform: translateY(2rem) scale(0.9);
+}
+
+
+.swiper {
+  /* overflow: visible !important; */
 }
