--- a/src/App.css
+++ b/src/App.css
@@ -153,10 +153,14 @@ h3 {
 }
 
 .player-stat-icon {
-  width: 2rem;
-  height: 2rem;
-  clip-path: circle(30% at 50% 50%);
-  transform: scale(1.1);
+  width: 1.8rem;
+  height: 1.8rem;
+  /* border-radius: 100%; */
+  transform: scale(0.8);
+  clip-path: circle(47% at 50% 50%);
+  /* 
+  transform: scale(1.1); */
+  box-shadow: 0px 0px 20px black;
   transform-origin: center left;
 }
 
