--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ body {
 
 .content-row {
   padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 body:after {
@@ -364,8 +365,10 @@ a {
   margin-top: auto;
   font-size: 15px;
   text-align: center;
+  position: fixed;
+  left: 0;
   width: 100%;
-  margin-top: 50px;
+  bottom: .5rem;
 }
 
 .random-fact-pretitle {
@@ -374,6 +377,5 @@ a {
 }
 
 .random-fact {
-  width: 100%;
   max-width: 600px;
 }
